setup basic socket.io add pastey emitter

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
   </head>
   <body>
     <h1>Pastey</h1>
-    <div>give to me your pastey's!</div>
-
+    <form id="pastey-form">
+      <input type="text" id="new-pastey"></input>
+      <input type="submit"></input>
+    </form>
+    <ul id="pastey-list"></ul>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/jquery.js"></script>
