add mongodb for saving & loading item history

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Pastey</h1>
     <form id="pastey-form">
       <input type="text" id="new-pastey"></input>
-      <input type="submit"></input>
+      <input type="submit" value="Add"></input>
     </form>
     <ul id="pastey-list"></ul>
 
