update code/markup nomenclature for changeover to UL

--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!doctype>
 <html>
-  <head>
-    <title>Pastey</title>
-    <link rel="stylesheet" href="css/core.css">
-  </head>
-  <body>
-    <h1>Pastey</h1>
-    <form id="pastey-form">
-      <input type="text" id="new-pastey"></input>
-      <input type="submit" value="Add"></input>
-    </form>
-    <ul id="pastey-list"></ul>
+<head>
+  <title>UnorderedList</title>
+  <link rel="stylesheet" href="css/core.css">
+</head>
+<body>
+  <h1>Unordered<span>List</span></h1>
+  <form id="add-item-form">
+    <input type="text" id="new-item"></input>
+    <input type="submit" value="Add"></input>
+  </form>
+  <ul id="item-list"></ul>
 
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="js/jquery.js"></script>
-    <script src="js/core.js"></script>
-  </body>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="js/jquery.js"></script>
+  <script src="js/core.js"></script>
+</body>
 </html>
