--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 <body>
   <div id="site">
     <h1>Unordered<span>List</span></h1>
+    <div id="warning">A list with this name already exists</div>
     <form id="load-list-form">
-      <input type="text" id="load-item"></input>
-      <input type="submit" id="new-item-button" value="New"></input>
-      <input type="submit" id="open-item-button" value="Open"></input>
+      <input type="text" id="load-list"></input>
+      <input type="submit" id="new-list-button" value="New"></input>
+      <input type="submit" id="open-list-button" value="Open"></input>
     </form>
 
     <form id="add-item-form">
