update home + favicon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div id="site">
-    <a href="#0" id="home-button">Home</a>
+    <a href="#0" id="home">Home</a>
     <h1>Unordered<span>List</span></h1>
     <div id="list-title">{{list_title}}</div>
     <form id="load-list-form">
