--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>UnorderedList</title>
   <link rel="stylesheet" href="css/core.css">
+  <link rel="icon" type="image/png" href="favicon.ico">
 </head>
 <body>
   <div id="site">
