update vendor scripts dir/path

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <ul id="item-list"></ul>
   </div>
   <script src="/socket.io/socket.io.js"></script>
-  <script src="js/jquery.js"></script>
+  <script src="js/vendor/jquery.js"></script>
   <script src="js/core.js"></script>
 </body>
 </html>
