make logo link home + clear active list

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
   <div id="site">
-    <a href="#0" id="home">Home</a>
-    <h1>Unordered<span>List</span></h1>
+    <a href="/">
+      <h1>Unordered<span>List</span></h1>
+    </a>
     <div id="list-title">{{list_title}}</div>
     <form id="load-list-form">
       <input type="text" id="load-list-input"></input>
