--- a/index.html
+++ b/index.html
@@ -1,28 +1,30 @@
 <!doctype>
 <html>
 <head>
+  <meta charset="utf-8">
   <title>UnorderedList</title>
+  <link rel="stylesheet" href="css/font-awesome.css">
   <link rel="stylesheet" href="css/core.css">
-  <link rel="icon" type="image/png" href="favicon.ico">
 </head>
 <body>
-  <div id="site">
-    <a href="/">
+  <div id="app">
+    <a href="/" tabindex="1">
       <h1>Unordered<span>List</span></h1>
     </a>
     <div id="list-title">{{list_title}}</div>
     <form id="load-list-form">
-      <input type="text" id="load-list-input"></input>
-      <input type="submit" id="new-list-button" value="Go"></input>
+      <input type="text" id="load-list-input" tabindex="1" autocomplete="off"></input>
+      <input type="submit" id="new-list-button" value="Go" tabindex="1"></input>
     </form>
     <form id="add-item-form">
-      <input type="text" id="new-item-input"></input>
-      <input type="submit" id="add-item-button" value="Add"></input>
+      <input type="text" id="new-item-input" tabindex="1" autocomplete="off"></input>
+      <input type="submit" id="add-item-button" value="Add" tabindex="1"></input>
     </form>
     <ul id="item-list"></ul>
   </div>
   <script src="/socket.io/socket.io.js"></script>
-  <script src="js/vendor/jquery.js"></script>
+  <script src="js/vendor/jquery.min.js"></script>
+  <script src="js/vendor/clipboard.min.js"></script>
   <script src="js/core.js"></script>
 </body>
 </html>
