move autocomplete attr to form tags

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       <h1>Unordered<span>List</span></h1>
     </a>
     <div id="list-title">{{list_title}}</div>
-    <form id="load-list-form">
-      <input type="text" id="load-list-input" tabindex="1" autocomplete="off"></input>
+    <form id="load-list-form" autocomplete="off">
+      <input type="text" id="load-list-input" tabindex="1"></input>
       <input type="submit" id="new-list-button" value="Go" tabindex="1"></input>
     </form>
-    <form id="add-item-form">
-      <input type="text" id="new-item-input" tabindex="1" autocomplete="off"></input>
+    <form id="add-item-form" autocomplete="off">
+      <input type="text" id="new-item-input" tabindex="1"></input>
       <input type="submit" id="add-item-button" value="Add" tabindex="1"></input>
     </form>
     <ul id="item-list"></ul>
