--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>UnorderedList</title>
-  <link rel="stylesheet" href="css/font-awesome.css">
-  <link rel="stylesheet" href="css/core.css">
+  <link rel="stylesheet" href="/public/css/font-awesome.css">
+  <link rel="stylesheet" href="/public/css/core.css">
 </head>
 <body>
   <div id="app">
@@ -23,8 +23,8 @@
     <ul id="item-list"></ul>
   </div>
   <script src="/socket.io/socket.io.js"></script>
-  <script src="js/vendor/jquery.min.js"></script>
-  <script src="js/vendor/clipboard.min.js"></script>
-  <script src="js/core.js"></script>
+  <script src="/public/js/vendor/jquery.min.js"></script>
+  <script src="/public/js/vendor/clipboard.min.js"></script>
+  <script src="/public/js/core.js"></script>
 </body>
 </html>
