cleanup text-selection, fix clipboard button hover-sticking bug

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <a href="/" tabindex="1">
       <h1>Unordered<span>List</span></h1>
     </a>
-    <div id="list-title">{{list_title}}</div>
+    <div id="list-title"><span></span></div>
     <form id="load-list-form" autocomplete="off">
       <input type="text" id="load-list-input" tabindex="1"></input>
       <input type="submit" id="new-list-button" value="Go" tabindex="1"></input>
