update favicon linkage

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>UnorderedList</title>
   <link rel="stylesheet" href="/public/css/font-awesome.css">
   <link rel="stylesheet" href="/public/css/core.css">
+  <link rel="icon" type="image/x-icon" href="/public/favicon.ico">
 </head>
 <body>
   <div id="app">
