add menu bar nav

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     </form>
     <ul id="item-list"></ul>
   </div>
+  <ul id="nav">
+    <li><a href="#">Download</a></li>
+    <li><a href="https://github.com/jrodl3r/unorderedlist">Github</a></li>
+  </ul>
   <script src="/socket.io/socket.io.js"></script>
   <script src="/public/js/vendor/jquery.min.js"></script>
   <script src="/public/js/vendor/clipboard.min.js"></script>
