update grunt builds, move index into /public

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>UnorderedList</title>
-  <link rel="stylesheet" href="/public/css/font-awesome.css">
-  <link rel="stylesheet" href="/public/css/core.css">
-  <link rel="icon" type="image/x-icon" href="/public/favicon.ico">
+  <link rel="stylesheet" href="public/css/font-awesome.css">
+  <link rel="stylesheet" href="public/css/core.css">
+  <link rel="icon" type="image/x-icon" href="public/favicon.ico">
 </head>
 <body>
   <div id="app">
@@ -27,9 +27,9 @@
     <li><a id="download" href="#">Download</a></li>
     <li><a id="github" href="https://github.com/jrodl3r/unorderedlist">Github</a></li>
   </ul>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="/public/js/vendor/jquery.min.js"></script>
-  <script src="/public/js/vendor/clipboard.min.js"></script>
-  <script src="/public/js/core.js"></script>
+  <script src="socket.io/socket.io.js"></script>
+  <script src="public/js/vendor/jquery.min.js"></script>
+  <script src="public/js/vendor/clipboard.min.js"></script>
+  <script src="public/js/core.js"></script>
 </body>
 </html>
