style chrome ext actions popup + options layouts

--- a/ext/options.html
+++ b/ext/options.html
@@ -4,16 +4,14 @@
   <title>UnorderedList</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-  <h3>List Name</h3>
+<body id="options-window">
+  <h1>Unordered<span>List</span></h1>
   <input id="list" type="text">
   <button id="save" type="submit">Save</button>
-  <div id="status"></div>
-
-  <br><br>
-
-  <a href="#" id="options">Customize Hotkeys</a>
-
+  <div id="status">&#10004; List Loaded</div>
+  <a href="http://unorderedlist.com/foo">Open List</a>
+  <span class="divider">|</span>
+  <a href="#" id="options">Edit Hotkeys</a>
   <script src="options.js"></script>
 </body>
 </html>
