--- a/ext/options.html
+++ b/ext/options.html
@@ -8,10 +8,10 @@
   <h1>Unordered<span>List</span></h1>
   <input id="list" type="text">
   <button id="save" type="submit">Save</button>
-  <div id="status">&#10004; List Loaded</div>
-  <a href="http://unorderedlist.com/foo">Open List</a>
+  <div id="status"></div>
+  <a id="open_list" href="#">Open List</a>
   <span class="divider">|</span>
-  <a href="#" id="options">Edit Hotkeys</a>
+  <a id="options" href="#">Edit Hotkeys</a>
   <script src="options.js"></script>
 </body>
 </html>
