--- a/ext/action.html
+++ b/ext/action.html
@@ -8,7 +8,10 @@
   <h1>Unordered<span>List</span></h1>
   <input id="list" type="text">
   <button id="save" type="submit">Save</button>
-  <div id="status"></div>
+  <div id="status">
+    <span class="pass">&#10004; List Loaded</span>
+    <span class="fail">&#10007; Not Found</span>
+  </div>
   <a id="open_list" href="#">Open List</a>
   <span class="divider">|</span>
   <a id="options" href="#">Edit Hotkeys</a>
