distribute chrome ext to play store + add extension link logic

--- a/tmpl/inc/home.html
+++ b/tmpl/inc/home.html
@@ -13,7 +13,4 @@
   </form>
   <ul id="item-list"></ul>
 </div>
-<ul id="nav">
-  <li><a id="download" href="#">Download</a></li>
-  <li><a id="github" href="https://github.com/jrodl3r/unorderedlist">Github</a></li>
-</ul>
+<ul id="nav"></ul>
