--- a/tmpl/index.html
+++ b/tmpl/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>UnorderedList</title>
+  <meta name="google-site-verification" content="iVXO7Vfe3ONCBhNvOoAnymMVa-TAMR2ob4yxvxfpyLs">
+  <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/jehhmlpdedncbbemoncbfabfaongchma">
   <link rel="stylesheet" href="public/css/font-awesome.css">
   <link rel="stylesheet" href="public/css/core.css">
   <link rel="icon" type="image/x-icon" href="public/favicon.ico">
