--- a/tmpl/inc/home.html
+++ b/tmpl/inc/home.html
@@ -1,4 +1,17 @@
+
+<nav>
+  <h1>UnorderedList</h1>
+  <ul id="menu">
+    <li><a href="#">Menu</a></li>
+    <li><a href="#">Download</a></li>
+    <li><a href="#">Share</a></li>
+  </ul>
+</nav>
 <div id="app">
+  <input id="input" type="text">
+</div>
+
+<!-- <div id="app">
   <a href="/" tabindex="1">
     <h1>Unordered<span>List</span></h1>
   </a>
@@ -13,4 +26,4 @@
   </form>
   <ul id="item-list"></ul>
 </div>
-<ul id="nav"></ul>
+<ul id="nav"></ul> -->
