--- a/tmpl/index.html
+++ b/tmpl/index.html
@@ -1,8 +1,11 @@
-<!doctype>
-<html>
+<!doctype html>
+<html class="no-js" lang="en-us">
 <head>
-  <meta charset="utf-8">
   <title>UnorderedList</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Fast, Ubiquitous Cloud Clipboard.">
   <meta name="google-site-verification" content="iVXO7Vfe3ONCBhNvOoAnymMVa-TAMR2ob4yxvxfpyLs">
   <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/jehhmlpdedncbbemoncbfabfaongchma">
   <link rel="stylesheet" href="public/css/font-awesome.css">
