continue fleshing-out responsive layout

--- a/tmpl/inc/home.html
+++ b/tmpl/inc/home.html
@@ -1,14 +1,15 @@
 
-<nav>
+<header>
   <h1>UnorderedList</h1>
   <ul id="menu">
-    <li><a href="#">Menu</a></li>
-    <li><a href="#">Download</a></li>
+    <li><a href="#"><i class="fa fa-bars"></i></a></li>
+    <li><a href="#">Chrome Extension</a></li>
     <li><a href="#">Share</a></li>
+    <li><a href="#">Login</a></li>
   </ul>
-</nav>
+</header>
 <div id="app">
-  <input id="input" type="text">
+  <input type="text" placeholder="List Name">
 </div>
 
 <!-- <div id="app">
