setup responsive add item logic + css anim

--- a/tmpl/inc/home.html
+++ b/tmpl/inc/home.html
@@ -9,7 +9,9 @@
   </ul>
 </header>
 <div id="app">
-  <input type="text" placeholder="List Name">
+  <div id="title"></div>
+  <input id="textbox" type="text" placeholder="List Name">
+  <ul id="items"></ul>
 </div>
 
 <!-- <div id="app">
