--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Fast, Ubiquitous Cloud Clipboard.">
+  <meta name="description" content="UnorderedList » Fast, Simple Cloud Clipboard.">
   <meta name="google-site-verification" content="iVXO7Vfe3ONCBhNvOoAnymMVa-TAMR2ob4yxvxfpyLs">
   <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/jehhmlpdedncbbemoncbfabfaongchma">
   <link rel="stylesheet" href="public/css/font-awesome.css">
@@ -24,7 +24,9 @@
     </ul>
   </header>
   <div id="app">
-    <input type="text" placeholder="List Name">
+    <div id="title"></div>
+    <input id="textbox" type="text" placeholder="List Name">
+    <ul id="items"></ul>
   </div>
   
   <!-- <div id="app">
