add responsive + animated item context menu

--- a/tmpl/inc/home.html
+++ b/tmpl/inc/home.html
@@ -1,16 +1,7 @@
 
-<header>
-  <h1>UnorderedList</h1>
-  <ul id="menu">
-    <li><a href="#"><i class="fa fa-bars"></i></a></li>
-    <li><a href="#">Chrome Extension</a></li>
-    <li><a href="#">Share</a></li>
-    <li><a href="#">Login</a></li>
-  </ul>
-</header>
 <div id="app">
   <div id="title"></div>
-  <input id="textbox" type="text" placeholder="List Name">
+  <input type="text" placeholder="List Name" tabindex="1">
   <ul id="items"></ul>
 </div>
 
