--- a/tmpl/index.html
+++ b/tmpl/index.html
@@ -4,7 +4,7 @@
   <title>UnorderedList</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <meta name="description" content="UnorderedList » Fast, Simple Cloud Clipboard.">
   <meta name="google-site-verification" content="iVXO7Vfe3ONCBhNvOoAnymMVa-TAMR2ob4yxvxfpyLs">
   <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/jehhmlpdedncbbemoncbfabfaongchma">
@@ -13,6 +13,15 @@
   <link rel="icon" type="image/x-icon" href="public/favicon.ico">
 </head>
 <body>
+  <header>
+    <h1>UnorderedList</h1>
+    <ul id="menu">
+      <li><a class="fa fa-bars" href=""></a></li>
+      <li><a href="#">Chrome Addon</a></li>
+      <li><a href="#">Share</a></li>
+      <li><a href="#">Login</a></li>
+    </ul>
+  </header>
   <!-- @include inc/home.html --><script src="socket.io/socket.io.js"></script>
   <script src="public/js/vendor/jquery.min.js"></script>
   <script src="public/js/vendor/clipboard.min.js"></script>
