setup initial off-canvas responsive menu

--- a/tmpl/inc/home.html
+++ b/tmpl/inc/home.html
@@ -1,8 +1,59 @@
 
-<div id="app">
-  <div id="title"></div>
-  <input type="text" placeholder="List Name" tabindex="1">
-  <ul id="items"></ul>
+<div id="wrapper">
+  <h1>UnorderedList</h1>
+  <a id="menu-button" class="fa fa-bars"></a>
+  <ul id="menu">
+    <li><a href="#"><i class="fa fa-lock"></i>Login</a></li>
+    <li><a href="#"><i class="fa fa-share-square-o"></i>Share</a></li>
+    <li><a href="#"><i class="fa fa-download"></i>Chrome Extension</a></li>
+    <li><a href="#"><i class="fa fa-cog"></i>Settings</a></li>
+    <li><a href="#"><i class="fa fa-life-ring"></i>Help &amp; Support</a></li>
+  </ul>
+
+  <div id="app">
+    <div class="inner">
+      <div id="title"></div>
+      <input type="text" placeholder="List Name" tabindex="1">
+      <ul id="items">
+        <!-- <li class="item active">
+          List Item Three
+          <ul class="menu">
+            <li><a class="fa fa-trash-o"><span>Delete</span></a></li>
+            <li><a class="fa fa-share-square-o"><span>Share</span></a></li>
+            <li><a class="fa fa-star-o"><span>Star</span></a></li>
+            <li><a class="fa fa-clipboard"><span>Copy</span></a></li>
+            <li><a class="fa fa-pencil"><span>Edit</span></a></li>
+          </ul>
+          <div class="vignette"></div>
+          <div class="icon fa fa-bars"></div>
+        </li>
+        <li class="item active">
+          List Item Two
+          <ul class="menu">
+            <li><a class="fa fa-trash-o"><span>Delete</span></a></li>
+            <li><a class="fa fa-share-square-o"><span>Share</span></a></li>
+            <li><a class="fa fa-star-o"><span>Star</span></a></li>
+            <li><a class="fa fa-clipboard"><span>Copy</span></a></li>
+            <li><a class="fa fa-pencil"><span>Edit</span></a></li>
+          </ul>
+          <div class="vignette"></div>
+          <div class="icon fa fa-bars"></div>
+        </li>
+        <li class="item active">
+          List Item One
+          <ul class="menu">
+            <li><a class="fa fa-trash-o"><span>Delete</span></a></li>
+            <li><a class="fa fa-share-square-o"><span>Share</span></a></li>
+            <li><a class="fa fa-star-o"><span>Star</span></a></li>
+            <li><a class="fa fa-clipboard"><span>Copy</span></a></li>
+            <li><a class="fa fa-pencil"><span>Edit</span></a></li>
+          </ul>
+          <div class="vignette"></div>
+          <div class="icon fa fa-bars"></div>
+        </li> -->
+      </ul>
+    </div>
+  </div>
 </div>
 
 <!-- <div id="app">
