cleanup responsive styles

--- a/tmpl/inc/home.html
+++ b/tmpl/inc/home.html
@@ -1,7 +1,9 @@
 
 <div id="wrapper">
-  <h1>UnorderedList</h1>
-  <a id="menu-button" class="fa fa-bars"></a>
+  <h1>
+    UnorderedList
+    <a id="menu-button" class="fa fa-bars"></a>
+  </h1>
   <ul id="menu">
     <li><a href="#"><i class="fa fa-lock"></i>Login</a></li>
     <li><a href="#"><i class="fa fa-share-square-o"></i>Share</a></li>
