update responsive notifications + setup ui object

--- a/tmpl/index.html
+++ b/tmpl/index.html
@@ -13,7 +13,8 @@
   <link rel="icon" type="image/x-icon" href="public/favicon.ico">
 </head>
 <body>
-  <!-- @include inc/home.html --><script src="socket.io/socket.io.js"></script>
+  <!-- @include inc/home.html -->
+  <!-- <script src="socket.io/socket.io.js"></script> -->
   <script src="public/js/vendor/jquery.min.js"></script>
   <script src="public/js/vendor/clipboard.min.js"></script>
   <script src="public/js/core.js"></script>
