--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,8 @@
     <ul id="item-list"></ul>
   </div>
   <ul id="nav"></ul> -->
-  <script src="socket.io/socket.io.js"></script>
+  
+  <!-- <script src="socket.io/socket.io.js"></script> -->
   <script src="public/js/vendor/jquery.min.js"></script>
   <script src="public/js/vendor/clipboard.min.js"></script>
   <script src="public/js/core.js"></script>
