cleanup responsive notifications logic + styles

--- a/tmpl/inc/home.html
+++ b/tmpl/inc/home.html
@@ -19,6 +19,9 @@
     </div>
   </div>
 </div>
+<div id="notify">
+  <div class="inner"></div>
+</div>
 
 <!-- <div id="app">
   <a href="/" tabindex="1">
