--- a/tmpl/inc/home.html
+++ b/tmpl/inc/home.html
@@ -14,7 +14,7 @@
   <div id="app">
     <div class="inner">
       <div id="title"></div>
-      <input type="text" placeholder="List Name" tabindex="1">
+      <input id="text-input" type="text" placeholder="List Name" tabindex="1">
       <ul id="items"></ul>
     </div>
   </div>
