hault prototype dev / prep to shelve as static asset/folder

--- a/public/index.html
+++ b/public/index.html
@@ -14,21 +14,21 @@
 </head>
 <body>
   
+  <h1>
+    <span>UnorderedList</span>
+    <a id="menu-button" class="fa fa-bars"></a>
+  </h1>
+  <ul id="menu">
+    <li><a href="#"><i class="fa fa-lock"></i>Login</a></li>
+    <li><a href="#"><i class="fa fa-share-square-o"></i>Share</a></li>
+    <li><a href="#"><i class="fa fa-download"></i>Chrome Extension</a></li>
+    <li><a href="#"><i class="fa fa-cog"></i>Settings</a></li>
+    <li><a href="#"><i class="fa fa-life-ring"></i>Help &amp; Support</a></li>
+  </ul>
   <div id="wrapper">
-    <h1>
-      UnorderedList
-      <a id="menu-button" class="fa fa-bars"></a>
-    </h1>
-    <ul id="menu">
-      <li><a href="#"><i class="fa fa-lock"></i>Login</a></li>
-      <li><a href="#"><i class="fa fa-share-square-o"></i>Share</a></li>
-      <li><a href="#"><i class="fa fa-download"></i>Chrome Extension</a></li>
-      <li><a href="#"><i class="fa fa-cog"></i>Settings</a></li>
-      <li><a href="#"><i class="fa fa-life-ring"></i>Help &amp; Support</a></li>
-    </ul>
-    <div id="app">
+    <div id="main">
       <div id="title"></div>
-      <input id="text-input" type="text" placeholder="List Name" tabindex="1">
+      <input id="text-input" type="text" placeholder="List Name" autocomplete="off" tabindex="1">
       <ul id="items"></ul>
     </div>
   </div>
