rollback new-ui prototype changes to `v0.0.2` state

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,8 @@
-<!doctype html>
-<html class="no-js" lang="en-us">
+<!doctype>
+<html>
 <head>
-  <title>UnorderedList</title>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <meta name="description" content="UnorderedList » Fast, Simple Cloud Clipboard.">
+  <title>UnorderedList</title>
   <meta name="google-site-verification" content="iVXO7Vfe3ONCBhNvOoAnymMVa-TAMR2ob4yxvxfpyLs">
   <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/jehhmlpdedncbbemoncbfabfaongchma">
   <link rel="stylesheet" href="public/css/font-awesome.css">
@@ -13,30 +10,7 @@
   <link rel="icon" type="image/x-icon" href="public/favicon.ico">
 </head>
 <body>
-  
-  <h1>
-    <span>UnorderedList</span>
-    <a id="menu-button" class="fa fa-bars"></a>
-  </h1>
-  <ul id="menu">
-    <li><a href="#"><i class="fa fa-lock"></i>Login</a></li>
-    <li><a href="#"><i class="fa fa-share-square-o"></i>Share</a></li>
-    <li><a href="#"><i class="fa fa-download"></i>Chrome Extension</a></li>
-    <li><a href="#"><i class="fa fa-cog"></i>Settings</a></li>
-    <li><a href="#"><i class="fa fa-life-ring"></i>Help &amp; Support</a></li>
-  </ul>
-  <div id="wrapper">
-    <div id="main">
-      <div id="title"></div>
-      <input id="text-input" type="text" placeholder="List Name" autocomplete="off" tabindex="1">
-      <ul id="items"></ul>
-    </div>
-  </div>
-  <div id="notify">
-    <div class="inner"></div>
-  </div>
-  
-  <!-- <div id="app">
+  <div id="app">
     <a href="/" tabindex="1">
       <h1>Unordered<span>List</span></h1>
     </a>
@@ -51,9 +25,8 @@
     </form>
     <ul id="item-list"></ul>
   </div>
-  <ul id="nav"></ul> -->
-  
-  <!-- <script src="socket.io/socket.io.js"></script> -->
+  <ul id="nav"></ul>
+  <script src="socket.io/socket.io.js"></script>
   <script src="public/js/vendor/jquery.min.js"></script>
   <script src="public/js/vendor/clipboard.min.js"></script>
   <script src="public/js/core.js"></script>
