--- a/tmpl/index.html
+++ b/tmpl/index.html
@@ -1,11 +1,8 @@
-<!doctype html>
-<html class="no-js" lang="en-us">
+<!doctype>
+<html>
 <head>
-  <title>UnorderedList</title>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <meta name="description" content="UnorderedList » Fast, Simple Cloud Clipboard.">
+  <title>UnorderedList</title>
   <meta name="google-site-verification" content="iVXO7Vfe3ONCBhNvOoAnymMVa-TAMR2ob4yxvxfpyLs">
   <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/jehhmlpdedncbbemoncbfabfaongchma">
   <link rel="stylesheet" href="public/css/font-awesome.css">
@@ -13,8 +10,7 @@
   <link rel="icon" type="image/x-icon" href="public/favicon.ico">
 </head>
 <body>
-  <!-- @include inc/home.html -->
-  <!-- <script src="socket.io/socket.io.js"></script> -->
+  <!-- @include inc/home.html --><script src="socket.io/socket.io.js"></script>
   <script src="public/js/vendor/jquery.min.js"></script>
   <script src="public/js/vendor/clipboard.min.js"></script>
   <script src="public/js/core.js"></script>
