--- a/tmpl/inc/home.html
+++ b/tmpl/inc/home.html
@@ -1,27 +1,4 @@
-
-<h1>
-  <span>UnorderedList</span>
-  <a id="menu-button" class="fa fa-bars"></a>
-</h1>
-<ul id="menu">
-  <li><a href="#"><i class="fa fa-lock"></i>Login</a></li>
-  <li><a href="#"><i class="fa fa-share-square-o"></i>Share</a></li>
-  <li><a href="#"><i class="fa fa-download"></i>Chrome Extension</a></li>
-  <li><a href="#"><i class="fa fa-cog"></i>Settings</a></li>
-  <li><a href="#"><i class="fa fa-life-ring"></i>Help &amp; Support</a></li>
-</ul>
-<div id="wrapper">
-  <div id="main">
-    <div id="title"></div>
-    <input id="text-input" type="text" placeholder="List Name" autocomplete="off" tabindex="1">
-    <ul id="items"></ul>
-  </div>
-</div>
-<div id="notify">
-  <div class="inner"></div>
-</div>
-
-<!-- <div id="app">
+<div id="app">
   <a href="/" tabindex="1">
     <h1>Unordered<span>List</span></h1>
   </a>
@@ -36,4 +13,4 @@
   </form>
   <ul id="item-list"></ul>
 </div>
-<ul id="nav"></ul> -->
+<ul id="nav"></ul>
